# SeaSight--Routing--App

./: .gitattributes  .gitignore  README.md  ideas.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: codeql.yml
app/: .gitignore  MARITIME_UX.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  index.css  vite-env.d.ts
app/src/components/: ActionDock.tsx  LayerToggles.tsx  Map.tsx  MapSimplified.tsx  RoutePlanner.tsx  SlidePanel.tsx  StatusLedger.tsx  (+1 more)
apps/web/: README.md  SECURITY_SETUP.md  env.example  index.html  package.json  setup-env.cjs  tsconfig.app.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE_OVERVIEW.md  DEVELOPER_GUIDE.md  QUICK_REFERENCE.md  README.md  RECENT_IMPROVEMENTS.md  ROUTER_DEVELOPER_GUIDE.md  ROUTER_ROADMAP.md  Todo.md  USER_GUIDE.md  document.md
my-CelNav-App/: CELNAV_APP_PLAN.md
my-CelNav-App/intercept/: DOCUMENTATION.md  README.md  pubspec.yaml
my-SMS-app/: Makefile
my-study-app/: README.md  ToDo.md  add-sample-data.js  package-lock.json  package.json  tailwind.config.js  test-supabase.js
novel-writer-app/: README.md  index.html  script.js  styles.css
packs/: generate_test_data.py  generate_test_key.py  requirements.txt
packs/test_data/: gfs_test.nc
router/: CMakeLists.txt  agent.md  isochrone_router.cpp  isochrone_router.hpp  main.cpp  shell_minimal.html  test_embind.html  test_simple.js
scripts/: build.sh  build_land_mask.py
tools/ci/: setup-emsdk.sh
tools/packs-builder/: build_pack.py  test_pack_builder.py  verify_pack.py
(+134 files in other folders)
